# Friday-system

./: .gitignore  .spotify_cache  FRIDAY_CAPABILITIES.md  README.md  agent_friday.py  boot.py  clap_detector.py  contacts.json  mcp_server.py  project_notes.txt  pyproject.toml  run_agent.py  scratch_pw.py  scratch_spotify.py  start_friday.pyw  test_voice.bat  test_voice.py  ui_manager.py
friday-ui/: index.html  package-lock.json  package.json
friday-ui/src/: App.css  App.jsx  index.css  main.jsx
