[project]
name = "friday-tony-stark-demo"
version = "0.1.0"
description = "Friday — A Tony Stark-inspired MCP server"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "comtypes>=1.4.16",
    "duckduckgo-search>=8.1.1",
    "fastmcp",
    "flask>=3.1.3",
    "httpx",
    "livekit-agents[deepgram,groq,openai,sarvam,silero]>=1.5.1",
    "livekit-plugins-google>=1.5.1",
    "numpy>=2.4.4",
    "pyautogui>=0.9.54",
    "pycaw>=20251023",
    "python-dotenv",
    "pywebview>=6.2.1",
    "requests>=2.33.1",
    "scipy>=1.17.1",
    "sounddevice>=0.5.5",
]

[project.scripts]
friday = "server:main"
friday_voice = "agent_friday:dev" # Points to the wrapper

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["server.py"]
